--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,7 +72,7 @@
     {% include schedule.html %}
     {% include speaker.html class="bg-mid-gray"%}
     {% include contributions.html %}
-    {% include call.html class="bg-mid-gray"%}
+    <!-- {% include call.html class="bg-mid-gray"%} -->
     {% include dates.html %}
     {% include organizer.html class="bg-mid-gray"%}
     {% include contact.html %}
