--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -13,13 +13,13 @@
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/wangwenjie.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://wenjiewwj.github.io/">Dr. Wenjie Wang</a></h4>
+        <img src="assets/img/xxx.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
+        <h4><a href="https://next-events.github.io/workshop-dec-2024/">Dr. xxx</a></h4>
         <p class="text-muted">National University of Singapore</p>
     </div>
 </div>
 
-<div class="col-sm-1">
+<!-- <div class="col-sm-1">
     &nbsp;
 </div>
             
@@ -113,9 +113,6 @@
     </div>
 </div>
 
-<!-- <div class="col-sm-1">
-    &nbsp;
-</div> -->
 
 
         </div>
@@ -147,7 +144,7 @@
         <h4><a href="https://hexiangnan.github.io/">Dr. Xiangnan He</a></h4>
         <p class="text-muted">University of Science and Technology of China</p>
     </div>
-</div>
+</div> -->
 
 <div class="col-sm-2">
     &nbsp;
