--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,7 +9,7 @@
     <div class="row text-justify">
       <div class="col-md-12">
         <p class="large text-muted">
-          <a href="mailto:wenjiewang96@gmail.com">wenjiewang96@gmail.com</a>
+          <a href="mailto:chuats@comp.nus.edu.sg">chuats@comp.nus.edu.sg</a>
         </p>
       </div>
     </div>
