--- a/_includes/contributions.html
+++ b/_includes/contributions.html
@@ -9,9 +9,9 @@
     <div class="row text-justify">
       <div class="col-md-12">
         <ul class="large text-muted">
-          <li><b>Diffusion Recommendation with Implicit Sequence Influence</b><br>
-            Yong Niu, Xing Xing, Zhichun Jia, Ruidi Liu, Mindong Xin and Jianfu Cui</li>
-          <li><b>A Study of Implicit User Unfairness in Large Language Models for Recommendation</b><br>
+          <li><b>Title</b><br>
+            Authors</li>
+          <!-- <li><b>A Study of Implicit User Unfairness in Large Language Models for Recommendation</b><br>
             Chen Xu, Wenjie Wang, Yuxin Li, Liang Pang, Jun Xu and Tat-Seng Chua</li>
           <li><b>Aligning GPTRec with Beyond-Accuracy Goals with Reinforcement Learning</b><br>
             Aleksandr Vladimirovich Petrov and Craig Macdonald</li>
@@ -24,7 +24,7 @@
           <li><b>Bridging Items and Language: A Transition Paradigm for Large Language Model-Based Recommendation</b> <a href='assets/slides/TransRec_Xinyu-Lin.pdf'>[Slides]</a>  <br> 
             Xinyu Lin, Wenjie Wang, Yongqi Li, Fuli Feng, See-Kiong Ng and Tat-Seng Chua</li>
           <li><b>OutfitGPT: LLMs as Fashion Outfit Generator and Recommender</b><br>
-            Yujuan Ding, Junrong Liao, Wenqi Fan, Yi Bin and Qing Li</li>
+            Yujuan Ding, Junrong Liao, Wenqi Fan, Yi Bin and Qing Li</li> -->
         </ul>
       </div>
     </div>
