--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -39,15 +39,13 @@
         <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
       </div>
     </div>
-    <table style="width: 100%">
+    TBA
+    <!-- <table style="width: 100%">
         <tr> <th width=130px> Activity type </th> <th width=150px> Time (Singapore Time) </th> <th width=400px> Title </th> </tr>
         <tr> <td width=130px> Opening </td> <td width=150px> 9.00am </td> <td></td> </tr>
-        <!-- <tr class=keynote width=130px>Keynote</td> <td width=150px>9.00am-9.35am</td> <class=keynote width=400px>Keynote 1: LLMs for Recommendations: A Hybrid Approach by Dr. Minmin Chen from Google </a></td> </tr> -->
         <tr class="keynote"> <td width=130px>Keynote</td> <td width=150px>9.00am-9.35am</td> <td width=400px>Keynote 1: LLMs for Recommendations: A Hybrid Approach by Dr. Minmin Chen from Google </td> </tr>
         <tr> <td width=130px>Paper oral</td> <td width=150px>9.35am-9.45am</td> <td width=400px>Multimodal Conditioned Diffusion Model for Recommendation</td> </tr>
         <tr> <td width=130px>Paper oral</td> <td width=150px>9.45pm-9.55pm</td> <td width=400px>Diffusion Recommendation with Implicit Sequence Influence</td> </tr>
-        <!-- <tr class=keynote width=130px>Keynote</td> <td width=150px>9.55am-10.30am</td> <td width=400px>Keynote 2 by Dr. Jiaqi Zhai and Dr. Rui Li from Meta </a></td> </tr>
-         -->
         <tr class="keynote"> <td width=130px>Keynote</td> <td width=150px>9.55am-10.30am</td> <td width=400px>Keynote 2: Actions Speak Louder than Words: Trillion-Parameter Sequential Transducers for Generative Recommendations by Dr. Jiaqi Zhai and Dr. Rui Li from Meta </td> </tr>
         <tr> <td width=130px> Coffee break </td> <td width=150px> 10.30am-11.00am</td><td></td> </tr>
         <tr class="keynote"> <td width=130px>Keynote</td> <td width=150px>11.00am-11.35am</td> <td width=400px>Keynote 3: Data, methods, and evaluation for knowledge-grounded conversational recommendation systems by Prof. Julian McAuley from UCSD </td> </tr>
@@ -58,12 +56,12 @@
         <tr> <td width=130px>Paper oral</td> <td width=150px>12.05pm-12.15pm</td> <td width=400px>How Reliable is Your Simulator? Analysis on the Limitations of Current LLM-based User Simulators for Conversational Recommendation</td> </tr>
         <tr> <td width=130px>Paper oral</td> <td width=150px>12.15pm-12.25pm</td> <td width=400px>Controllable and Transparent Textual Latents for Recommender Systems</td> </tr>
         <tr> <td width=130px>Paper oral</td> <td width=150px>12.25pm-12.35pm</td> <td width=400px>Aligning GPTRec with Beyond-Accuracy Goals with Reinforcement Learning</td> </tr>      
-    </table>
+    </table> -->
   </div>
   <div class="row text-justify">
     <div class="col-md-12">
       <p class="large text-muted venue-description">
-        Our workshop will be held in <b>Leo 3</b> @ Resorts World Sentosa Convention Centre. <a href='assets/files/layout.pdf'>[Layout]</a>
+        Our workshop will be held in Level 01-03 Seminar Room @ innovation 4.0 @ NUS. <a href='assets/files/layout.pdf'>[Layout]</a>
       </p>
     </div>
   </div>
