--- a/assets/css/agency.css
+++ b/assets/css/agency.css
@@ -51,7 +51,7 @@ h4,
 h5,
 h6 {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 700
 }
 
@@ -287,7 +287,7 @@ header .intro-text .intro-lead-in {
 
 header .intro-text .intro-heading {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 700;
     font-size: 20px;
     line-height: 20px;
@@ -308,7 +308,7 @@ header .intro-text .intro-heading {
     }
     header .intro-text .intro-heading {
         font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-        text-transform: uppercase;
+        /* text-transform: uppercase; */
         font-weight: 700;
         font-size: 40px;
         line-height: 40px;
