--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,35 +1,30 @@
 <section id="summary" style="padding-top: 30px;" class={{ include.class }}>
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Summary</h2>
-                    <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
                 </div>
-            </div>
+            </div> -->
             <div class="row text-justify">
                 <div class="col-md-12">
-                    <p class="large text-muted">
+                    <!-- <p class="large text-muted">
                        TBA </a>
-                    </p>
-
-                    <!-- <ul class="large text-muted">
-                        <li>Time series pattern mining and detection, representation, searching and indexing, classification, clustering, prediction, forecasting, and rule mining.
-                        </li>
-                        <li>Time series with special structure: spatiotemporal (e.g., traffic speeds at different locations), relational (e.g., patients with similar diseases), hierarchical, etc.
-                        </li>
-                        <li>Time series with sparse or irregular sampling, missing values at and not at random, and special types of measurement noise or bias.
-                        </li>
-                        <li>Time series that are multivariate, high-dimensional, heterogeneous, etc., or that possess other atypical properties.
-                        </li>
-                        <li>Time series analysis using less traditional approaches, such as deep learning and subspace clustering.</li>
-                        <li>Privacy preserving time series mining and learning.</li>
-                        <li>Online, high-speed learning and mining from streaming time series.</li>
-                        <li>Uncertain time series mining.</li>
-                        <li>Applications to high impact or relatively new time series domains, such as health and medicine, road traffic, and air quality.
-                        </li>
-                        <li>New, open, or unsolved problems in time series analysis and mining.
-                        </li>
-                    </ul> -->
+                    </p> -->
+                    <p class="large text-muted">
+                        We are pleased to announce the NExT Singapore Workshop 2024, which will take place from December 2 to 6, 2024. The theme of this year’s workshop is “Responsible AI and LLMs”, featuring a series of focused activities:
+                    <ul class="large text-muted">
+                      <ul>
+                        <li><b>2-3 Dec</b>: Workshop on AI Policy, led by Prof. Simon Chesterman from NUS Law Faculty.
+                        <li><b>4-5 Dec</b>: NExT Workshop focusing on "Responsible AI and LLMs".
+                        <ul style=list-style-type:disc><li><b>6 Dec</b>: Discussion on AI trends and future planning for NExT Workshops.</li></ul>
+                      </ul>
+                    </ul>
+                    <p class="large text-muted">
+                        The AI Policy Workshop will be held at the NUS campus (exact location to be confirmed), while the activities from December 4 to 6 will take place at Level 01-03 Seminar Room, Innovation 4.0, NUS, Singapore 117602.
+                    <p class="large text-muted">
+                        This workshop is designed to bring together NExT members and collaborators to explore the advancements, applications, and future pathways of Responsible AI and LLMs. Participation is by invitation only, with registration limited to invitees. 
+                    <p class="large text-muted">
+                        More details will be shared soon—stay tuned! We look forward to seeing you in Singapore. 
                 </div>
             </div>
         </div>
