--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -35,11 +35,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Workshop Final Programme</h2>
+        <h2 class="section-heading">Program</h2>
         <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
       </div>
     </div>
-    TBA
+    TBD. More details will be shared soon—stay tuned! 
     <!-- <table style="width: 100%">
         <tr> <th width=130px> Activity type </th> <th width=150px> Time (Singapore Time) </th> <th width=400px> Title </th> </tr>
         <tr> <td width=130px> Opening </td> <td width=150px> 9.00am </td> <td></td> </tr>
