--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -13,11 +13,14 @@
                     <p class="large text-muted">
                         We are pleased to announce the NExT Singapore Workshop 2024, which will take place from December 2 to 6, 2024. The theme of this year’s workshop is “Responsible AI and LLMs”, featuring a series of focused activities:
                     <ul class="large text-muted">
-                      <ul>
+                        <ul style=list-style-type:disc><li><b>2-3 Dec</b>: Workshop on AI Policy, led by Prof. Simon Chesterman from NUS Law Faculty.</li></ul>
+                        <ul style=list-style-type:disc><li><b>4-5 Dec</b>: NExT Workshop focusing on "Responsible AI and LLMs".</li></ul>
+                        <ul style=list-style-type:disc><li><b>6 Dec</b>: Discussion on AI trends and future planning for NExT Workshops.</li></ul>
+                      <!-- <ul>
                         <li><b>2-3 Dec</b>: Workshop on AI Policy, led by Prof. Simon Chesterman from NUS Law Faculty.
                         <li><b>4-5 Dec</b>: NExT Workshop focusing on "Responsible AI and LLMs".
                         <ul style=list-style-type:disc><li><b>6 Dec</b>: Discussion on AI trends and future planning for NExT Workshops.</li></ul>
-                      </ul>
+                      </ul> -->
                     </ul>
                     <p class="large text-muted">
                         The AI Policy Workshop will be held at the NUS campus (exact location to be confirmed), while the activities from December 4 to 6 will take place at Level 01-03 Seminar Room, Innovation 4.0, NUS, Singapore 117602.
