--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -70,8 +70,8 @@
 
     {% include summary.html class="bg-mid-gray"%}
     {% include schedule.html %}
-    {% include speaker.html class="bg-mid-gray"%}
-    {% include contributions.html %}
+    <!-- {% include speaker.html class="bg-mid-gray"%} -->
+    <!-- {% include contributions.html %} -->
     <!-- {% include call.html class="bg-mid-gray"%} -->
     {% include dates.html %}
     {% include organizer.html class="bg-mid-gray"%}
