--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -70,7 +70,7 @@
 
     {% include summary.html class="bg-mid-gray"%}
     {% include schedule.html %}
-    <!-- {% include speaker.html class="bg-mid-gray"%} -->
+    {% include speaker.html class="bg-mid-gray"%}
     <!-- {% include contributions.html %} -->
     <!-- {% include call.html class="bg-mid-gray"%} -->
     {% include dates.html %}
