--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,7 +73,7 @@
     <!-- {% include speaker.html class="bg-mid-gray"%} -->
     <!-- {% include contributions.html %} -->
     <!-- {% include call.html class="bg-mid-gray"%} -->
-    {% include dates.html %}
+    <!-- {% include dates.html %} -->
     {% include organizer.html class="bg-mid-gray"%}
     {% include contact.html %}
 
