--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -45,7 +45,7 @@
                     <a class="page-scroll" href="#summary">Intro</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#schedule">Schedule</a>
+                    <a class="page-scroll" href="#schedule">Program</a>
                 </li>
                 <!-- <li>
                     <a class="page-scroll" href="#speaker">Speakers</a>
