--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -38,7 +38,7 @@
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/southampton.webp" class="img-responsive img-circle" alt="" width="600" height="600">
+        <img src="assets/img/southampton.png" class="img-responsive img-circle" alt="" width="600" height="600">
         <!-- <h4><a href="https://generative-rec.github.io/#organizer">Ms. Xinyu Lin</a></h4>
         <p class="text-muted">National University of Singapore</p> -->
     </div>
