--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,8 @@
     <!-- {% include contributions.html %} -->
     <!-- {% include call.html class="bg-mid-gray"%} -->
     <!-- {% include dates.html %} -->
-    {% include organizer.html class="bg-mid-gray"%}
+    <!-- {% include organizer.html class="bg-mid-gray"%} -->
+    {% include organizer.html %}
     {% include contact.html %}
 
     <!-- jQuery -->
