--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -146,11 +146,11 @@
     </div>
 </div> -->
 
-<div class="col-sm-2">
+<!-- <div class="col-sm-2">
     &nbsp;
-</div>
+</div> -->
             
         </div>
         
-    </div>
+    </div> 
 </section>
