--- a/assets/css/agency.css
+++ b/assets/css/agency.css
@@ -617,7 +617,7 @@ section h3.section-subheading {
 
 .team-member img {
     margin: 0 auto;
-    /* border: 5px solid #ccc; */
+    border: 5px solid #ccc;
 }
 
 .team-member h4 {
