--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -19,15 +19,13 @@
     </div>
 </div>
 
-<div class="col-sm-1">
+<!-- <div class="col-sm-1">
     &nbsp;
 </div>
             
                 <div class="col-sm-2">
     <div class="team-member">
         <img src="assets/img/THU.svg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <!-- <h4><a href="http://home.ustc.edu.cn/~zy2015/">Mr. Yang Zhang</a></h4>
-        <p class="text-muted">University of Science and Technology of China</p> -->
     </div>
 </div>
 
@@ -39,10 +37,8 @@
                 <div class="col-sm-2">
     <div class="team-member">
         <img src="assets/img/southampton.png" class="img-responsive img-circle" alt="" width="600" height="600">
-        <!-- <h4><a href="https://generative-rec.github.io/#organizer">Ms. Xinyu Lin</a></h4>
-        <p class="text-muted">National University of Singapore</p> -->
     </div>
-</div>
+</div> -->
 
 <!-- <div class="col-sm-1">
     &nbsp;
