--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
-                <h2 class="section-heading">Organizers </h2>
+                <h2 class="section-heading">Workshop Organizers </h2>
                 <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
             </div>
         </div>
@@ -14,8 +14,6 @@
                 <div class="col-sm-2">
     <div class="team-member">
         <img src="assets/img/NUS.png" class="img-responsive img-circle" alt="" width="600" height="600">
-        <!-- <h4><a href="https://next-events.github.io/workshop-dec-2024/">Dr. xxx</a></h4>
-        <p class="text-muted">National University of Singapore</p> -->
     </div>
 </div>
 
@@ -25,22 +23,26 @@
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/THU.svg" class="img-responsive img-circle" alt="" width="600" height="600">
+        <img src="assets/img/zhangyang.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
+        <h4><a href="http://home.ustc.edu.cn/~zy2015/">Mr. Yang Zhang</a></h4>
+        <p class="text-muted">University of Science and Technology of China</p>
     </div>
 </div>
 
 
- <div class="col-sm-1">
+<div class="col-sm-1">
     &nbsp;
 </div>
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/southampton.png" class="img-responsive img-circle" alt="" width="600" height="600">
+        <img src="assets/img/linxinyu.jpeg" class="img-responsive img-circle" alt="" width="600" height="600">
+        <h4><a href="https://generative-rec.github.io/#organizer">Ms. Xinyu Lin</a></h4>
+        <p class="text-muted">National University of Singapore</p>
     </div>
-</div> -->
+</div>
 
-<!-- <div class="col-sm-1">
+<div class="col-sm-1">
     &nbsp;
 </div>
 
@@ -142,11 +144,11 @@
     </div>
 </div> -->
 
-<!-- <div class="col-sm-2">
+<div class="col-sm-2">
     &nbsp;
-</div> -->
+</div>
             
         </div>
         
-    </div> 
+    </div>
 </section>
