--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -45,26 +45,26 @@
                     <a class="page-scroll" href="#summary">Intro</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#schedule">Program</a>
+                    <a class="page-scroll" href="#schedule">Schedule</a>
                 </li>
-                <!-- <li>
+                <li>
                     <a class="page-scroll" href="#speaker">Speakers</a>
-                </li> -->
+                </li>
                 <!-- <li>
                     <a class="page-scroll" href="#contributions">Contributions</a>
                 </li> -->
                 <!-- <li>
                     <a class="page-scroll" href="#call">Call for Papers</a>
                 </li> -->
-                <!-- <li>
+                <li>
                     <a class="page-scroll" href="#dates">Important Dates</a>
-                </li> -->
+                </li>
                 <li>
                     <a class="page-scroll" href="#organizer">Organizer</a>
                 </li>
-                <!-- <li>
+                <li>
                     <a class="page-scroll" href="#contact">Contact</a>
-                </li> -->
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
