--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading"> </h2>
+        <h2 class="section-heading">Contact</h2>
         <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
       </div>
     </div>
     <div class="row text-justify">
       <div class="col-md-12">
         <p class="large text-muted">
-          Copyright © NExT++ Research Center
+          <a href="mailto:chuats@comp.nus.edu.sg">chuats@comp.nus.edu.sg</a>
         </p>
       </div>
     </div>
