--- a/_includes/dates.html
+++ b/_includes/dates.html
@@ -23,7 +23,10 @@
     <div class="row text-justify">
       <div class="col-md-12">
         <ul class="large text-muted">
-          
+          <!-- <li><b>Paper Submission Deadline:</b> February 5, 2024</li> -->
+          <!-- <li><b>Paper Submission Deadline:</b> <del>February 5, 2024 (11:59 PM, AoE)</del> <span class="extended-date">(extended, February 26, 2024)</span> </li> -->
+          <!-- <li><b>Acceptance Notification:</b> March 4, 2024</li> -->
+          <li><b>Workshop Date:</b> Wed December 4th - Thu December 5th, 2024</li>
         </ul>
       </div>
     </div>
