--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,9 +73,8 @@
     <!-- {% include speaker.html class="bg-mid-gray"%} -->
     <!-- {% include contributions.html %} -->
     <!-- {% include call.html class="bg-mid-gray"%} -->
-    <!-- {% include dates.html %} -->
+    {% include dates.html %}
     {% include organizer.html class="bg-mid-gray"%}
-    <!-- {% include organizer.html %} -->
     {% include contact.html %}
 
     <!-- jQuery -->
