--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,6 +75,7 @@
     <!-- {% include call.html class="bg-mid-gray"%} -->
     <!-- {% include dates.html %} -->
     {% include organizer.html class="bg-mid-gray"%}
+    <!-- {% include organizer.html %} -->
     {% include contact.html %}
 
     <!-- jQuery -->
