--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -14,6 +14,8 @@
                 <div class="col-sm-2">
     <div class="team-member">
         <img src="assets/img/NUS.png" class="img-responsive img-circle" alt="" width="600" height="600">
+        <h4>Mr. Yang Zhang</h4>
+        <p class="text-muted">NUS</p>
     </div>
 </div>
 
