--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
-                <h2 class="section-heading">Organizers </h2>
+                <h2 class="section-heading">Workshop Organizers </h2>
                 <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
             </div>
         </div>
@@ -13,9 +13,9 @@
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/NUS.png" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4>Mr. Yang Zhang</h4>
-        <p class="text-muted">NUS</p>
+        <img src="assets/img/xxx.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
+        <h4><a href="https://next-events.github.io/workshop-dec-2024/">Dr. xxx</a></h4>
+        <p class="text-muted">National University of Singapore</p>
     </div>
 </div>
 
