--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -14,8 +14,8 @@
                 <div class="col-sm-2">
     <div class="team-member">
         <img src="assets/img/xxx.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://next-events.github.io/workshop-dec-2024/">Dr. xxx</a></h4>
-        <p class="text-muted">National University of Singapore</p>
+        <!-- <h4><a href="https://next-events.github.io/workshop-dec-2024/">Dr. xxx</a></h4>
+        <p class="text-muted">National University of Singapore</p> -->
     </div>
 </div>
 
