--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -39,7 +39,7 @@
         <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
       </div>
     </div>
-    <!-- TBD. More details will be shared soon—stay tuned!  -->
+    TBD. More details will be shared soon—stay tuned! 
     <!-- <table style="width: 100%">
         <tr> <th width=130px> Activity type </th> <th width=150px> Time (Singapore Time) </th> <th width=400px> Title </th> </tr>
         <tr> <td width=130px> Opening </td> <td width=150px> 9.00am </td> <td></td> </tr>
@@ -61,8 +61,7 @@
   <div class="row text-justify">
     <div class="col-md-12">
       <p class="large text-muted venue-description">
-        <!-- TBD. More details will be shared soon—stay tuned! <a href='assets/files/layout.pdf'>[Layout]</a> -->
-        TBD. More details will be shared soon—stay tuned!
+        Our workshop will be held in Level 01-03 Seminar Room @ innovation 4.0 @ NUS. <a href='assets/files/layout.pdf'>[Layout]</a>
       </p>
     </div>
   </div>
