--- a/_includes/speaker.html
+++ b/_includes/speaker.html
@@ -8,10 +8,11 @@
 
             </div>
             
-            <!-- {% assign speakers = site.speakers | sort:"order" %}
+            {% assign speakers = site.speakers | sort:"order" %}
             {% for member in speakers %}
                 {% include speaker-member.html %}
-            {% endfor %} -->
+            {% endfor %}
+
             
         </div>
 
