--- a/_includes/contributions.html
+++ b/_includes/contributions.html
@@ -9,6 +9,22 @@
     <div class="row text-justify">
       <div class="col-md-12">
         <ul class="large text-muted">
+          <li><b>Title</b><br>
+            Authors</li>
+          <!-- <li><b>A Study of Implicit User Unfairness in Large Language Models for Recommendation</b><br>
+            Chen Xu, Wenjie Wang, Yuxin Li, Liang Pang, Jun Xu and Tat-Seng Chua</li>
+          <li><b>Aligning GPTRec with Beyond-Accuracy Goals with Reinforcement Learning</b><br>
+            Aleksandr Vladimirovich Petrov and Craig Macdonald</li>
+          <li><b>Controllable and Transparent Textual Latents for Recommender Systems</b><br>
+            Emiliano Penaloza, Haolun Wu, Olivier Gouvert and Laurent Charlin</li>
+          <li><b>How Reliable is Your Simulator? Analysis on the Limitations of Current LLM-based User Simulators for Conversational Recommendation</b><br>
+            Lixi Zhu, Xiaowen Huang and Jitao Sang</li>
+          <li><b>Multimodal Conditioned Diffusion Model for Recommendation</b> <a href='assets/slides/Multimodal_Conditioned_Diffusion_Model_for_Recommendation-YimengYang.pdf'>[Slides]</a>  <br> 
+            Haokai Ma, Yimeng Yang, Lei Meng, Ruobing Xie and Xiangxu Meng</li>
+          <li><b>Bridging Items and Language: A Transition Paradigm for Large Language Model-Based Recommendation</b> <a href='assets/slides/TransRec_Xinyu-Lin.pdf'>[Slides]</a>  <br> 
+            Xinyu Lin, Wenjie Wang, Yongqi Li, Fuli Feng, See-Kiong Ng and Tat-Seng Chua</li>
+          <li><b>OutfitGPT: LLMs as Fashion Outfit Generator and Recommender</b><br>
+            Yujuan Ding, Junrong Liao, Wenqi Fan, Yi Bin and Qing Li</li> -->
         </ul>
       </div>
     </div>
