--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -17,15 +17,13 @@
     </div>
 </div>
 
-<!-- <div class="col-sm-1">
+ <div class="col-sm-1">
     &nbsp;
 </div>
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/zhangyang.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="http://home.ustc.edu.cn/~zy2015/">Mr. Yang Zhang</a></h4>
-        <p class="text-muted">University of Science and Technology of China</p>
+        <img src="assets/img/THU.svg" class="img-responsive img-circle" alt="" width="600" height="600">
     </div>
 </div>
 
@@ -36,12 +34,11 @@
             
                 <div class="col-sm-2">
     <div class="team-member">
-        <img src="assets/img/linxinyu.jpeg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://generative-rec.github.io/#organizer">Ms. Xinyu Lin</a></h4>
-        <p class="text-muted">National University of Singapore</p>
+        <img src="assets/img/southampton.png" class="img-responsive img-circle" alt="" width="600" height="600">
     </div>
 </div>
 
+<!--
 <div class="col-sm-1">
     &nbsp;
 </div>
