--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -70,7 +70,7 @@
 
     {% include summary.html class="bg-mid-gray"%}
     {% include schedule.html %}
-    {% include organizer.html class="bg-mid-gray"%}
+    {% include organizer.html %}
     {% include contact.html %}
 
     <!-- jQuery -->
