--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -1,151 +1,78 @@
-<section id="organizer" class={{ include.class }}>
+<section id="organizers" class="bg-light"></section>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
-                <h2 class="section-heading">Organizers </h2>
-                <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
+            <div class="col-lg-8 mx-auto">
+                <h2>Organizers</h2>
+
+		<span>
+                    <a href="http://nus.edu.sg/">
+                        <img src="assets/img/nus.png" width="190" style="margin-right: 30px">
+                    </a>
+                    <a href="https://www.ntu.edu.sg">
+                        <img src="assets/img/ntu.png" width="230" style="margin-right: 20px">
+                    </a>
+                    <a href="https://www.smu.edu.sg/">
+                    <img src="assets/img/smu.png" width="230" style="margin-right: 20px">
+                    </a>
+                    <a href="https://www.sutd.edu.sg/">
+                        <img src="assets/img/sutd.png" width="180" style="margin-left: 100px">
+                    </a>
+                    <a href="https://www.a-star.edu.sg/i2r">
+                    <img src="assets/img/i2r.png" width="190" style="margin-left: 120px">
+                    </a>
+                </span>
+		   
+                <p>
+                    <table class="table">
+                        <tbody>
+		                <tr>
+		                    <td>General Chair:</td>
+		                    <td>
+		                        <p><a href="https://kokiljaidka.wordpress.com"> Kokil Jaidka</a>, National University of Singapore</p>
+		                    </td>
+		                </tr>
+
+		                <tr>
+		                    <td>PC Chair:</td>
+		                    <td>
+		                        <p><a href="https://sites.google.com/view/gaowei"> Wei Gao</a>, Singapore Management University</p>
+		                    </td>
+		                </tr>
+
+		                <tr>
+		                    <td>Organizing Committee:</td>
+		                    <td>
+		                        <p><a href="https://wing.comp.nus.edu.sg/people/"> Yanxia Qin</a>,  National University of Singapore</p>
+		                        <p><a href="http://haofei.vip/"> Hao Fei</a>,  National University of Singapore</p>
+		                        <p><a href="https://dengyang17.github.io/"> Yang Deng</a>,  National University of Singapore</p>
+		                        <p><a href="https://wing.comp.nus.edu.sg/people/"> Sun Shuo</a>,  Institute for Infocomm Research</p>
+		                        <p><a href="https://suzyahyah.github.io/about/"> Suzanna Sia</a>,  Johns Hopkins University</p>
+		                        <p><a href="#"> Gerard Yeo</a>,  National University of Singapore</p>
+		                    </td>
+		                </tr>
+
+		                <tr>
+		                    <td>Co-organizers:</td>
+		                    <td>
+		                        <p><a href="https://www.comp.nus.edu.sg/~kanmy">Min-Yen Kan</a>, National University of Singapore</p>
+		                        <p><a href="https://www.comp.nus.edu.sg/~nght">Hwee Tou Ng</a>, National University of Singapore</p>
+		                        <p><a href="https://www.chuatatseng.com/">Tat-Seng Chua</a>, National University of Singapore</p>
+		                        <p><a href="https://raihanjoty.github.io">Shafiq Joty</a>, Nanyang Technological University</p>
+		                        <p><a href="https://sites.google.com/site/nancyfchen/home">Nancy Chen</a>, Institute for Infocomm Research</p>
+		                        <p><a href="http://www.colips.org/~sujian/">Jian Su</a>, Institute for Infocomm Research</p>
+		                        <p><a href="http://www.mysmu.edu/faculty/jingjiang">Jing Jiang</a>, Singapore Management University</p>
+		                        <p><a href="https://istd.sutd.edu.sg/people/faculty/lu-wei">Wei Lu</a>, Singapore University of Technology and Design</p>
+		                        <p><a href="https://people.sutd.edu.sg/~sporia/">Soujanya Poria</a>, Singapore University of Technology and Design</p>
+		                    </td>
+		                </tr>
+
+				
+			</tbody>
+                   </table>
+
+                </p>
+		    
             </div>
         </div>
-        
-        <div class="row">
-
-            
-            
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/NUS.png" class="img-responsive img-circle" alt="" width="600" height="600">
-    </div>
-</div>
-
- <div class="col-sm-1">
-    &nbsp;
-</div>
-            
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/THU.svg" class="img-responsive img-circle" alt="" width="600" height="600">
-    </div>
-</div>
-
-
-<div class="col-sm-1">
-    &nbsp;
-</div>
-            
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/southampton.png" class="img-responsive img-circle" alt="" width="600" height="600">
-    </div>
-</div>
-
-<!--
-<div class="col-sm-1">
-    &nbsp;
-</div>
-
-<div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/fengfuli.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://fulifeng.github.io/">Dr. Fuli Feng</a></h4>
-        <p class="text-muted">University of Science and Technology of China</p>
-    </div>
-</div>
-
-<div class="col-sm-1">
-    &nbsp;
-</div>
-            
-        </div>
-
-        <div class="row">
-            
-
-
-    
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/liuweiwen.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://wwliu555.github.io/">Dr. Weiwen Liu</a></h4>
-        <p class="text-muted">Huawei Noah's Ark Lab, China</p>
-    </div>
-</div>
-
-
-
-<div class="col-sm-1">
-    &nbsp;
-</div>
-            
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/liuyong.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="http://www.yongliu.org">Dr. Yong Liu</a></h4>
-        <p class="text-muted">Huawei Noah’s Ark Lab, Singapore</p>
-    </div>
-</div>
-
-<div class="col-sm-1">
-    &nbsp;
-</div>
-            
-            <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/xiangyu_zhao.jpeg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://zhaoxyai.github.io/">Dr. Xiangyu Zhao</a></h4>
-        <p class="text-muted">City University of Hong Kong</p>
-    </div>
-</div>
-
-<div class="col-sm-1">
-    &nbsp;
-</div>
-            
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/zhaoxin.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="http://playbigdata.ruc.edu.cn/batmanfly/">Dr. Wayne Xin Zhao</a></h4>
-        <p class="text-muted">Renmin University of China</p>
-    </div>
-</div>
-
-
-
-        </div>
-
-        <div class="row">
-            
-            <div class="col-sm-3">
-    &nbsp;
-</div>
-            
-            
-                <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/songyang.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="http://sonyis.me/">Dr. Yang Song</a></h4>
-        <p class="text-muted">Kuaishou Technology, Beijing, China</p>
-    </div>
-</div>
-
-
-
-<div class="col-sm-1">
-    &nbsp;
-</div>  
-
-            <div class="col-sm-2">
-    <div class="team-member">
-        <img src="assets/img/hexiangnan.jpg" class="img-responsive img-circle" alt="" width="600" height="600">
-        <h4><a href="https://hexiangnan.github.io/">Dr. Xiangnan He</a></h4>
-        <p class="text-muted">University of Science and Technology of China</p>
-    </div>
-</div> -->
-
-<div class="col-sm-2">
-    &nbsp;
-</div>
-            
-        </div>
-        
     </div>
 </section>
