--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -6,7 +6,7 @@
 
 		<span>
                     <a href="http://nus.edu.sg/">
-                        <img src="assets/img/nus.png" width="190" style="margin-right: 30px">
+                        <img src="assets/img/NUS.png" width="190" style="margin-right: 30px">
                     </a>
                     <a href="https://www.ntu.edu.sg">
                         <img src="assets/img/ntu.png" width="230" style="margin-right: 20px">
