--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -8,69 +8,14 @@
                     <a href="http://nus.edu.sg/">
                         <img src="assets/img/NUS.png" width="190" style="margin-right: 30px">
                     </a>
-                    <a href="https://www.ntu.edu.sg">
-                        <img src="assets/img/ntu.png" width="230" style="margin-right: 20px">
+                    <a href="https://www.tsinghua.edu.cn/en/">
+                        <img src="assets/img/thu.png" width="230" style="margin-right: 20px">
                     </a>
-                    <a href="https://www.smu.edu.sg/">
-                    <img src="assets/img/smu.png" width="230" style="margin-right: 20px">
-                    </a>
-                    <a href="https://www.sutd.edu.sg/">
-                        <img src="assets/img/sutd.png" width="180" style="margin-left: 100px">
-                    </a>
-                    <a href="https://www.a-star.edu.sg/i2r">
-                    <img src="assets/img/i2r.png" width="190" style="margin-left: 120px">
+                    <a href="https://www.southampton.ac.uk/">
+                    <img src="assets/img/southampton.png" width="230" style="margin-right: 20px">
                     </a>
                 </span>
 		   
-                <p>
-                    <table class="table">
-                        <tbody>
-		                <tr>
-		                    <td>General Chair:</td>
-		                    <td>
-		                        <p><a href="https://kokiljaidka.wordpress.com"> Kokil Jaidka</a>, National University of Singapore</p>
-		                    </td>
-		                </tr>
-
-		                <tr>
-		                    <td>PC Chair:</td>
-		                    <td>
-		                        <p><a href="https://sites.google.com/view/gaowei"> Wei Gao</a>, Singapore Management University</p>
-		                    </td>
-		                </tr>
-
-		                <tr>
-		                    <td>Organizing Committee:</td>
-		                    <td>
-		                        <p><a href="https://wing.comp.nus.edu.sg/people/"> Yanxia Qin</a>,  National University of Singapore</p>
-		                        <p><a href="http://haofei.vip/"> Hao Fei</a>,  National University of Singapore</p>
-		                        <p><a href="https://dengyang17.github.io/"> Yang Deng</a>,  National University of Singapore</p>
-		                        <p><a href="https://wing.comp.nus.edu.sg/people/"> Sun Shuo</a>,  Institute for Infocomm Research</p>
-		                        <p><a href="https://suzyahyah.github.io/about/"> Suzanna Sia</a>,  Johns Hopkins University</p>
-		                        <p><a href="#"> Gerard Yeo</a>,  National University of Singapore</p>
-		                    </td>
-		                </tr>
-
-		                <tr>
-		                    <td>Co-organizers:</td>
-		                    <td>
-		                        <p><a href="https://www.comp.nus.edu.sg/~kanmy">Min-Yen Kan</a>, National University of Singapore</p>
-		                        <p><a href="https://www.comp.nus.edu.sg/~nght">Hwee Tou Ng</a>, National University of Singapore</p>
-		                        <p><a href="https://www.chuatatseng.com/">Tat-Seng Chua</a>, National University of Singapore</p>
-		                        <p><a href="https://raihanjoty.github.io">Shafiq Joty</a>, Nanyang Technological University</p>
-		                        <p><a href="https://sites.google.com/site/nancyfchen/home">Nancy Chen</a>, Institute for Infocomm Research</p>
-		                        <p><a href="http://www.colips.org/~sujian/">Jian Su</a>, Institute for Infocomm Research</p>
-		                        <p><a href="http://www.mysmu.edu/faculty/jingjiang">Jing Jiang</a>, Singapore Management University</p>
-		                        <p><a href="https://istd.sutd.edu.sg/people/faculty/lu-wei">Wei Lu</a>, Singapore University of Technology and Design</p>
-		                        <p><a href="https://people.sutd.edu.sg/~sporia/">Soujanya Poria</a>, Singapore University of Technology and Design</p>
-		                    </td>
-		                </tr>
-
-				
-			</tbody>
-                   </table>
-
-                </p>
 		    
             </div>
         </div>
