--- a/_includes/organizer.html
+++ b/_includes/organizer.html
@@ -1,20 +1,20 @@
-<section id="organizers" class="bg-light"></section>
+<section id="organizer" class={{ include.class }}>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h2>Organizers</h2>
+            <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
+                <h2 class="section-heading">Organizers </h2>
 
-		<span>
-                    <a href="http://nus.edu.sg/">
-                        <img src="assets/img/NUS.png" width="190" style="margin-right: 30px">
-                    </a>
-                    <a href="https://www.tsinghua.edu.cn/en/">
-                        <img src="assets/img/thu.png" width="230" style="margin-right: 20px">
-                    </a>
-                    <a href="https://www.southampton.ac.uk/">
-                    <img src="assets/img/southampton.png" width="230" style="margin-right: 20px">
-                    </a>
-                </span>
+            <span>
+                <a href="http://nus.edu.sg/">
+                    <img src="assets/img/NUS.png" width="160" style="margin-right: 30px">
+                </a>
+                <a href="https://www.tsinghua.edu.cn/en/">
+                    <img src="assets/img/thu.png" width="230" style="margin-right: 20px">
+                </a>
+                <a href="https://www.southampton.ac.uk/">
+                <img src="assets/img/southampton.png" width="230" style="margin-right: 20px">
+                </a>
+            </span>
 		   
 		    
             </div>
