--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -60,6 +60,9 @@
                     <a class="page-scroll" href="#dates">Important Dates</a>
                 </li> -->
                 <li>
+                    <a class="page-scroll" href="#location">Location</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#organizer">Organizer</a>
                 </li>
                 <!-- <li>
