--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,6 +71,7 @@
     {% include summary.html class="bg-mid-gray"%}
     {% include schedule.html %}
     {% include organizer.html %}
+    {% include location.html %}
     {% include contact.html %}
 
     <!-- jQuery -->
