--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -59,11 +59,11 @@
                 <!-- <li>
                     <a class="page-scroll" href="#dates">Important Dates</a>
                 </li> -->
-                <li>
-                    <a class="page-scroll" href="#location">Location</a>
+                <li></li>
+                    <a class="page-scroll" href="#organizer">Organizers</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#organizer">Organizer</a>
+                    <a class="page-scroll" href="#location">Location</a>
                 </li>
                 <!-- <li>
                     <a class="page-scroll" href="#contact">Contact</a>
