--- a/_includes/location.html
+++ b/_includes/location.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
-                <h2 class="section-heading">Organizers </h2>
+                <h2 class="section-heading">Location</h2>
                 <p>
                  The workshop will be held at the <b>Innovation 4.0, NUS (3 Research Link, Singapore 117602)</b>.
                 </p>
