--- a/_includes/location.html
+++ b/_includes/location.html
@@ -4,7 +4,7 @@
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
                 <h2 class="section-heading">Location</h2>
                 <p>
-                 The workshop will be held at the <b>Innovation 4.0, NUS (3 Research Link, Singapore 117602)</b>.
+                 The workshop will be held at <b>Innovation 4.0, NUS (3 Research Link, Singapore 117602)</b>.
                 </p>
                 <div class="iframe-container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.7310027013878!2d103.7775202503096!3d1.2968241861370973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1b3be9c6fabd%3A0xa50c38c2456942de!2sInnovation%204.0!5e0!3m2!1szh-CN!2ssg!4v1728464905817!5m2!1szh-CN!2ssg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
