--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="row text-justify">
-      <div class="col-md-12">
+      <div class="col-md-12 text-center">
         <p class="large text-muted">
           Copyright © NExT++ Research Center
         </p>
