--- a/_includes/location.html
+++ b/_includes/location.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
                 <h2 class="section-heading">Location</h2>
-                <p>
+                <p class="large text-muted venue-description">
                     The workshop will be held at <b>Innovation 4.0, NUS (3 Research Link, Singapore 117602)</b>.
                 </p>
                 <div class="iframe-container">
