--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -65,6 +65,9 @@
                 <li>
                     <a class="page-scroll" href="#location">Location</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#registration">Registration</a>
+                </li>
                 <!-- <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li> -->
