--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,6 +69,7 @@
     </header>
 
     {% include summary.html class="bg-mid-gray"%}
+    {% include registration.html %}
     {% include schedule.html %}
     {% include organizer.html %}
     {% include location.html %}
