--- a/_includes/registration.html
+++ b/_includes/registration.html
@@ -18,6 +18,9 @@
                       <a href="https://forms.gle/MFKJKYVxu5jx6UHK7" target="_blank" class="btn btn-primary btn-large">Registration (Google Form)</a>
                     </p>
                 </center>
+                <p class="large text-muted venue-description"></p>
+                    The recommended hotel is <b>Park Avenue Rochester (31 Rochester Dr, Singapore 138637) </b>. You can download the <a href="assets/doc/PAR_Booking Form-NUS-NExT.pdf" download>booking form</a>, complete it, and send it to the reservation department. Contact details are provided in the form.
+                </p>
             </div>
         </div>
     </div>
