--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -70,6 +70,7 @@
 
     {% include summary.html class="bg-mid-gray"%}
     {% include registration.html %}
+    {% include hotel.html %}
     {% include schedule.html %}
     {% include organizer.html %}
     {% include location.html %}
