--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -48,6 +48,9 @@
                     <a class="page-scroll" href="#registration">Registration</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#hotel">Hotel</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#schedule">Program</a>
                 </li>
                 <!-- <li>
