--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,19 +1,22 @@
 
-<section id="organizer" class={{ include.class }}>
+<section id="sponsor" class={{ include.class }}>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 20px;">
-                <h2 class="section-heading">Organizers </h2>
+                <h2 class="section-heading">Sponsors </h2>
 
             <span>
-                <a href="http://nus.edu.sg/">
-                    <img src="assets/img/NUS.png" width="160" style="margin-right: 30px">
+                <a href="https://www.zhipuai.cn/">
+                    <img src="_sponsors/zhipu.jpg" width="160" style="margin-right: 30px">
                 </a>
-                <a href="https://www.tsinghua.edu.cn/en/">
-                    <img src="assets/img/thu.png" width="270" style="margin-right: 20px">
+		<a href="https://www.scitix.ai/">
+                    <img src="_sponsors/scitix.jpg" width="160" style="margin-right: 30px">
                 </a>
-                <a href="https://www.southampton.ac.uk/">
-                <img src="assets/img/southampton.png" width="270" style="margin-right: 20px">
+                <a href="https://www.6estates.com/">
+                    <img src="_sponsors/6estates.jpg" width="270" style="margin-right: 20px">
+                </a>
+                <a href="https://modelbest.cn/">
+                <img src="_sponsors/modelbest.jpg" width="270" style="margin-right: 20px">
                 </a>
             </span>
 		   
