--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,6 +73,7 @@
     {% include hotel.html %}
     {% include schedule.html %}
     {% include organizer.html %}
+    {% include sponsors.html %}
     {% include location.html %}
     {% include contact.html %}
 
