--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -7,7 +7,7 @@
 
             <span>
                 <a href="https://www.zhipuai.cn/">
-                    <img src="_sponsors/zhipu.jpg" width="160" style="margin-right: 30px">
+                    <img src="assets/img/zhipu.jpg" width="160" style="margin-right: 30px">
                 </a>
 		<a href="https://www.scitix.ai/">
                     <img src="_sponsors/scitix.jpg" width="160" style="margin-right: 30px">
