--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -69,6 +69,9 @@
                     <a class="page-scroll" href="#organizer">Organizers</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#sponsors">Sponsors</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#location">Location</a>
                 </li>
                 <!-- <li>
