--- a/assets/css/agency.css
+++ b/assets/css/agency.css
@@ -261,7 +261,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 header {
-    background-image: url(../img/nuscomputing.jpg.jpg);
+    background-image: url(../img/nuscomputing.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     -webkit-background-size: cover;
