--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -9,8 +9,11 @@
                 <a href="https://www.zhipuai.cn/">
                     <img src="assets/img/zhipu.jpg" width="200" style="margin-right: 30px; margin-bottom: 50px">
                 </a>
+		<a href="https://www.huawei.com/sg/">
+                    <img src="assets/img/huawei.jpg" width="200" style="margin-right: 30px; margin-bottom: 50px">
+                </a>
 		<a href="https://www.scitix.ai/">
-                    <img src="assets/img/ScitiX-LOGO.png" width="200" style="margin-right: 30px; margin-bottom: 50px">
+                    <img src="assets/img/ScitiX2024.png" width="200" style="margin-right: 30px; margin-bottom: 50px">
                 </a>
                 <a href="https://www.6estates.com/">
                     <img src="assets/img/6estates.jpg" width="200" style="margin-right: 30px; margin-bottom: 50px">
